[gd_scene load_steps=11 format=3 uid="uid://fu1ed73xtegq"]

[ext_resource type="Script" path="res://player.gd" id="1_87i3u"]
[ext_resource type="Texture2D" uid="uid://r78euwg3hea6" path="res://src/assets/Wizzard/Idle/Idle-Sheet.png" id="2_pjhta"]
[ext_resource type="Texture2D" uid="uid://0l4fkb7grau4" path="res://src/assets/Wizzard/Run/Run-Sheet.png" id="2_run6j"]
[ext_resource type="Texture2D" uid="uid://b4cendgw5beco" path="res://src/assets/Arrow.png" id="4_6nrrb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5crdu"]
radius = 5.09902

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjov4"]
size = Vector2(14, 30)

[sub_resource type="Animation" id="Animation_qkd78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_run6j")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_abqca"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pjhta")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_bou6f"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_run6j")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rrgdt"]
_data = {
"RESET": SubResource("Animation_qkd78"),
"idle": SubResource("Animation_abqca"),
"run": SubResource("Animation_bou6f")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_87i3u")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
texture_filter = 1
position = Vector2(-1, 1)
texture = ExtResource("2_run6j")
hframes = 4

[node name="Detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_5crdu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_wjov4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rrgdt")
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(1, 1)
zoom = Vector2(4, 4)

[node name="Up" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
offset_left = -15.0
offset_top = -48.0
offset_right = 17.0
offset_bottom = -16.0
texture_normal = ExtResource("4_6nrrb")

[node name="Down" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
offset_left = -15.0
offset_top = 21.0
offset_right = 17.0
offset_bottom = 53.0
texture_normal = ExtResource("4_6nrrb")
flip_v = true

[node name="Left" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
offset_left = -46.0
offset_top = 19.0
offset_right = -14.0
offset_bottom = 51.0
rotation = -1.57079
texture_normal = ExtResource("4_6nrrb")

[node name="Right" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
offset_left = 17.0
offset_top = 20.0
offset_right = 49.0
offset_bottom = 52.0
rotation = -1.57079
texture_normal = ExtResource("4_6nrrb")
flip_v = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_bottom = 63.0
grow_horizontal = 0

[node name="Right" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Left" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Down" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Detector" to="." method="_on_area_entered"]
[connection signal="button_down" from="Up" to="." method="_on_up_button_down"]
[connection signal="button_down" from="Down" to="." method="_on_down_button_down"]
[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
